--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/ogre-yoga/journal-node-api/issues"
   },
-  "homepage": "https://github.com/ogre-yoga/journal-node-api#readme"
+  "homepage": "https://github.com/ogre-yoga/journal-node-api#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "node": "^12.18.3",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.4"
+  }
 }
