--- a/package.json
+++ b/package.json
@@ -28,5 +28,12 @@
     "node": "^12.18.3",
     "nodemon": "^2.0.4",
     "sequelize": "^6.3.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.4",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/register": "^7.10.5"
   }
 }
