--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/ogre-yoga/journal-node-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node": "^12.18.3",
     "sequelize": "^6.3.4",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
