--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "node": "^12.18.3",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
