--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-type": "^15.0.0",
     "multer": "^1.4.2",
     "node": "^12.18.3",
     "path": "^0.12.7",
+    "read-chunk": "^3.2.0",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0"
